Refactor project configuration and source files for MSPM0G3507
- Updated launch.json to improve debugging configuration with XDS110 and OpenOCD.
- Enhanced settings.json with additional file associations and CMake configuration settings.
- Modified tasks.json to utilize CMake for building the project and adjusted flashing commands for OpenOCD.
- Revised CMakeLists.txt to streamline project setup, including user-configurable paths and improved SysConfig integration.
- Updated compile_commands.json to reflect new include paths and compilation commands.
- Enhanced ti_msp_dl_config.c and ti_msp_dl_config.h with timer and GPIO configurations.
- Refactored gpio_toggle_output.c to implement timer-based LED toggling with interrupt handling.
- Updated gpio_toggle_output.syscfg to include timer configuration and GPIO settings.
- Added .clangd configuration for improved IDE support.
- Cleaned up .gitignore to exclude unnecessary files.
- Removed outdated openocd.cfg file as configuration is now handled directly in launch.json.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,22 +2,34 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Cortex-Debug (OpenOCD)",
+            "name": "Debug (XDS110 + OpenOCD)",
             "cwd": "${workspaceFolder}",
-            "executable": "${workspaceFolder}/build/${workspaceFolderBasename}.elf",
+            "executable": "${command:cmake.launchTargetPath}",
             "request": "launch",
             "type": "cortex-debug",
+            "runToEntryPoint": "main",
             "servertype": "openocd",
-            "device": "MSPM0G3507", // 直接指定G3507
+
+            // ================================================================
+            // **核心修改在这里！**
+            // 我们不再使用 openocd.cfg 这个中间文件。
+            // 直接把你在命令行中成功验证过的两个配置文件列在这里。
+            // ================================================================
             "configFiles": [
-                "interface/stlink.cfg", // 你的调试器接口配置，例如 "interface/jlink.cfg"
-                "target/ti_mspm0.cfg"   // 确保你的OpenOCD有此文件
+                // 第一个 -f 参数：指定接口
+                "interface/xds110.cfg",
+                
+                // 第二个 -f 参数：指定目标芯片 (使用我们项目目录下的文件)
+                "${workspaceFolder}/ti_mspm0.cfg"
             ],
-            "svdFile": "${command:cmake.getCacheValue:CORTEX_DEBUG_SVD_FILE}", // 从CMake缓存获取SVD文件
-            "openOCDPath": "openocd", // 确保在PATH中，否则提供完整路径
-            "preLaunchTask": "Build Project",
-            "toolchainPath": "arm-none-eabi-gdb",
-            "armToolchainPath": "arm-none-eabi-gdb"
+            
+            // 为了解决那个速度警告，我们可以在这里直接添加 OpenOCD 命令
+            "serverArgs": [
+                "-c", "adapter speed 4000"
+            ],
+
+            "svdFile": "${cmake:CORTEX_DEBUG_SVD_FILE}",
+            "preLaunchTask": "Build Project"
         }
     ]
 }
