更新 CMakeLists.txt 和添加 Python 预处理脚本以优化 SysConfig 文件生成流程

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 # ==============================================================================
-# MSPM0G3507 CMake 项目 - 通用模板 (中文注释最终版 - 正确的自定义目标)
+# MSPM0G3507 CMake 项目 - 终极完整版
+# 结合了Python预处理和GLOB自动发现源文件
 # ==============================================================================
 
 # 包含工具链配置文件
@@ -7,7 +8,11 @@ include(toolchain.cmake)
 
 # 推荐 CMake 版本 3.14 或更高
 cmake_minimum_required(VERSION 3.14)
-project(MSPM0G3507App LANGUAGES C CXX ASM) 
+
+# 确保能找到Python解释器
+find_package(Python3 REQUIRED)
+
+project(MSPM0G3507App LANGUAGES C CXX ASM)
 
 # ==============================================================================
 # 用户可配置的路径 (缓存变量)
@@ -52,7 +57,7 @@ include_directories(
     "${GENERATED_SRC_DIR}"
 )
 
-# --- SysConfig 代码生成 (CMake原生解析JSON并替换别名的终极方案) ---
+# --- SysConfig 代码生成 (Python预处理终极方案) ---
 
 # 定义相关文件路径
 set(SDK_PRODUCT_JSON "${TI_SDK_ROOT}/.metadata/product.json")
@@ -60,84 +65,53 @@ set(SYSCONFIG_INPUT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/src/common/main.syscfg")
 set(SYSCONFIG_OUTPUT_DIR "${GENERATED_SRC_DIR}")
 set(BOARD_JSON_FILE "${TI_SDK_ROOT}/source/ti/boards/.meta/LP_MSPM0G3507.syscfg.json")
 set(SYSCONFIG_TEMP_FILE "${CMAKE_CURRENT_BINARY_DIR}/main.syscfg.temp")
-
-# 1. 读取板级JSON定义文件
-file(READ ${BOARD_JSON_FILE} BOARD_JSON_CONTENT)
-# 移除换行符，方便正则表达式处理
-string(REPLACE "\n" "" BOARD_JSON_CONTENT ${BOARD_JSON_CONTENT})
-string(REPLACE "\r" "" BOARD_JSON_CONTENT ${BOARD_JSON_CONTENT})
-
-# 2. 读取项目syscfg文件
-file(READ ${SYSCONFIG_INPUT_FILE} PROJECT_SYSCFG_CONTENT)
-
-# 3. 循环查找并替换所有 "boosterpack.X" 别名
-#    这个正则表达式会匹配所有 "boosterpack." 后面跟着数字的模式
-string(REGEX MATCHALL "\"boosterpack\\.[0-9]+\"" BOOSTERPACK_ALIASES ${PROJECT_SYSCFG_CONTENT})
-
-# 去除重复的别名
-list(REMOVE_DUPLICATES BOOSTERPACK_ALIASES)
-
-message(STATUS "在 .syscfg 文件中找到需要替换的别名: ${BOOSTERPACK_ALIASES}")
-
-# 遍历找到的每一个别名
-foreach(ALIAS ${BOOSTERPACK_ALIASES})
-    # 从别名中提取出数字，例如从 "boosterpack.15" 中提取 15
-    string(REGEX REPLACE "\"boosterpack\\.([0-9]+)\"" "\\1" PIN_NUMBER ${ALIAS})
-
-    # 在JSON内容中，根据这个数字找到对应的物理引脚名
-    # 这个正则表达式查找 "number": PIN_NUMBER, ... "name": "PIN_NAME" 这样的模式
-    string(REGEX MATCH "\"number\":[ ]*${PIN_NUMBER},[^\}]*\"name\":[ ]*\"([A-Z0-9]+)\"" MATCHED_PIN_BLOCK ${BOARD_JSON_CONTENT})
-
-    if(MATCHED_PIN_BLOCK)
-        # 从匹配到的块中，提取出物理引脚名 (第一个捕获组)
-        set(PHYSICAL_PIN "${CMAKE_MATCH_1}")
-        message(STATUS "  -> 正在将 ${ALIAS} 替换为 \"${PHYSICAL_PIN}\"")
-        # 在项目syscfg内容中执行替换
-        string(REPLACE ${ALIAS} "\"${PHYSICAL_PIN}\"" PROJECT_SYSCFG_CONTENT ${PROJECT_SYSCFG_CONTENT})
-    else()
-        message(WARNING "  -> 未能在 ${BOARD_JSON_FILE} 中找到别名 ${ALIAS} 的定义！")
-    endif()
-endforeach()
-
-# 4. 将替换后的内容写入临时文件
-file(WRITE ${SYSCONFIG_TEMP_FILE} "${PROJECT_SYSCFG_CONTENT}")
-
-# 定义生成的 .c 和 .h 文件路径（假设生成文件名为 ti_sysconfig.c/h）
+set(PYTHON_PREPROCESSOR_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/preprocess_syscfg.py")
 set(SYSCONFIG_GENERATED_C "${SYSCONFIG_OUTPUT_DIR}/ti_msp_dl_config.c")
 set(SYSCONFIG_GENERATED_H "${SYSCONFIG_OUTPUT_DIR}/ti_msp_dl_config.h")
 
-# 2. 定义一个自定义命令，它只负责一件事：生成文件。
-#    这个命令的输出就是我们需要的 .c 和 .h 文件。
+# 定义一个自定义命令，它负责生成文件
 add_custom_command(
     OUTPUT ${SYSCONFIG_GENERATED_C} ${SYSCONFIG_GENERATED_H}
+    
+    # 第一步：调用Python脚本进行预处理
+    COMMAND ${Python3_EXECUTABLE} ${PYTHON_PREPROCESSOR_SCRIPT}
+            "${BOARD_JSON_FILE}"
+            "${SYSCONFIG_INPUT_FILE}"
+            "${SYSCONFIG_TEMP_FILE}"
+            
+    # 第二步：调用CLI，使用Python生成的临时文件
     COMMAND ${SYSCONFIG_CLI_PATH}
-        --product ${SDK_PRODUCT_JSON}
-        --device ${TARGET_CHIP}
+        --product "${SDK_PRODUCT_JSON}"
+        --device  "${TARGET_CHIP}"
         --package "LQFP-64(PM)"
-        --script ${SYSCONFIG_TEMP_FILE}
-        --output ${SYSCONFIG_OUTPUT_DIR}
-    # 这个命令的主要依赖是那个临时syscfg文件
-    MAIN_DEPENDENCY ${SYSCONFIG_TEMP_FILE}
-    # 也依赖原始syscfg文件
-    DEPENDS ${SYSCONFIG_INPUT_FILE}
+        --script  "${SYSCONFIG_TEMP_FILE}"
+        --output  "${SYSCONFIG_OUTPUT_DIR}"
+        
+    MAIN_DEPENDENCY ${SYSCONFIG_INPUT_FILE}
+    DEPENDS ${PYTHON_PREPROCESSOR_SCRIPT}
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    COMMENT "正在为 MSPM0G3507 生成 SysConfig 文件 (已自动解析引脚别名)"
+    COMMENT "正在为 MSPM0G3507 生成 SysConfig 文件 (Python预处理 + CLI生成)"
     VERBATIM
 )
 
-# 6. 定义一个自定义目标，它的唯一作用就是“触发”上面的自定义命令。
-#    我们将让我们的主目标依赖于这个触发器。
+# 定义一个自定义目标，用于“触发”上面的命令
 add_custom_target(sysconfig_generate
     DEPENDS ${SYSCONFIG_GENERATED_C} ${SYSCONFIG_GENERATED_H}
 )
 
+# --- SysConfig 代码生成结束 ---
 
-# 7. 定义源文件 (现在可以安全地包含生成的 .c 文件了)
-file(GLOB_RECURSE ALL_SRC_FILES
-    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
+
+# 5. 定义源文件 (使用GLOB_RECURSE自动捕获)
+file(GLOB_RECURSE ALL_PROJECT_SOURCES
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/common/*.c"
 )
-# 现在我们可以直接在这里包含它，因为CMake通过add_custom_command已经知道了它的生成规则
-list(APPEND ALL_SRC_FILES ${SYSCONFIG_GENERATED_C})
+
+# 将自动捕获的源文件和SysConfig生成的源文件合并
+set(ALL_SRC_FILES
+    ${ALL_PROJECT_SOURCES}
+    ${SYSCONFIG_GENERATED_C}
+)
 
 # 6. 定义 SDK 库文件
 set(SDK_LIBS
@@ -145,20 +119,17 @@ set(SDK_LIBS
     "${TI_SDK_ROOT}/source/ti/driverlib/lib/gcc/m0p/mspm0g1x0x_g3x0x/driverlib.a"
 )
 
-# 8. 定义可执行目标 (注意！不再需要 target_sources)
+# 7. 定义可执行目标
 add_executable(${PROJECT_NAME}.elf ${ALL_SRC_FILES})
 
-
-# 9. 明确指定 elf 目标依赖于 SysConfig 生成目标
-#    这一步至关重要，它建立了构建顺序
+# 8. 明确指定 elf 目标依赖于 SysConfig 虚拟目标
 add_dependencies(${PROJECT_NAME}.elf sysconfig_generate)
 
-
-# 8. 应用编译和链接选项
+# 9. 应用编译和链接选项
 target_compile_options(${PROJECT_NAME}.elf PRIVATE
     ${ARM_ARCH_FLAGS}
     ${COMMON_COMPILE_FLAGS}
-    "-I/usr/lib/arm-none-eabi/include" # <-- 请根据你的实际路径修改
+    "-I/usr/lib/arm-none-eabi/include"
     "-I/usr/lib/gcc/arm-none-eabi/12.2.1/include"
 )
 
@@ -174,11 +145,10 @@ target_link_options(${PROJECT_NAME}.elf PRIVATE
     ${LINKER_FLAGS_SPECS}
 )
 
-# 9. 链接库
+# 10. 链接库
 target_link_libraries(${PROJECT_NAME}.elf PRIVATE ${SDK_LIBS} m)
 
-
-# 10. 定义构建后命令
+# 11. 定义构建后命令
 add_custom_command(
     TARGET ${PROJECT_NAME}.elf POST_BUILD
     COMMAND ${CMAKE_OBJCOPY} -O binary ${PROJECT_NAME}.elf ${PROJECT_NAME}.bin
@@ -187,6 +157,6 @@ add_custom_command(
     COMMENT "正在生成 .bin, .hex 文件并显示大小"
 )
 
-# 11. IDE 集成支持
+# 12. IDE 集成支持
 set_target_properties(${PROJECT_NAME}.elf PROPERTIES CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CORTEX_DEBUG_SVD_FILE "${SVD_FILE_PATH}" CACHE STRING "用于 Cortex-Debug 的 SVD 文件路径")
